# avdl-serde-code-generator

./: Cargo.toml  README.md
src/: avdl.pest  lib.rs  to_rust.rs
