[package]
name = "avdl-serde-code-generator"
version = "0.1.0"
authors = ["Marco Munizaga <marco@marcopolo.io>"]
edition = "2018"
description = "A library to convert avdl decalarations into Rust types with serde support"
repository = "https://github.com/MarcoPolo/avdl-serde-code-generator"
license = "Apache-2.0 OR MIT"

[dependencies]
regex = "1.2.1"
pest = "2.1.1"
pest_derive = "2.1.0"
